[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neoflo-metrics"
version = "0.1.0"
description = "Neoflo platform metrics SDK for Python microservices"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-api>=1.25.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
starlette = ["starlette>=0.27.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "starlette>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neoflo_metrics"]
